--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,20 @@
     <artifactId>githubDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>github Web updownload demo</name>
-    <description>inital comment </description>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.4.RELEASE</version>
     </parent>
+
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
-
 </project>
